--- a/front/index.html
+++ b/front/index.html
@@ -14,6 +14,8 @@
   </header>
   <div id="app" class="container my-4">
     <h2 class="mb-4 text-center">Actualizar Estado de Citas</h2>
+
+    <!-- Filtro de estados -->
     <div class="d-flex justify-content-center mb-3">
       <label for="estadoFilter" class="form-label me-3">Filtrar por estado:</label>
       <select v-model="selectedEstado" @change="filterByEstado" class="form-select w-auto" id="estadoFilter">
@@ -21,6 +23,8 @@
         <option v-for="estado in estados" :key="estado.id" :value="estado.descripcion">{{ estado.descripcion }}</option>
       </select>
     </div>
+
+    <!-- Tabla de citas -->
     <table class="table table-striped table-hover">
       <thead class="table-dark">
         <tr>
@@ -45,6 +49,7 @@
         </tr>
       </tbody>
     </table>
+    <!-- Modal para actualizar estado -->
     <div v-if="selectedCita" class="modal show d-block" tabindex="-1">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -55,6 +60,7 @@
           <div class="modal-body">
             <p><strong>Paciente:</strong> {{ selectedCita.paciente }}</p>
             <p><strong>Doctor:</strong> {{ selectedCita.doctor }}</p>
+            <p><strong>Sede:</strong> {{ selectedCita.sede }}</p>
             <p><strong>Estado Actual:</strong> {{ selectedCita.estadoActual }}</p>
             <div>
               <label for="nuevoEstado" class="form-label">Nuevo Estado:</label>
